Alles is kaolo. Occassions iframe in the page, but not loading correctly, I dont know how. Did some basic styling for the form on the service page. But took me way too long

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,6 +128,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	}
 }
 
+.occassion-iframe-wrapper {
+	header {
+		display: none;
+	}
+}
+
 .block {
 	h5 {
 		text-align: center;
@@ -165,12 +171,73 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 	.reparatie-formulier {
 		background-color: white;
+
 		form div {
 			display: block;
 			margin: 10px;
 			padding: 10px;
 		}
+
+		.veldhuizen__container {
+			grid-template-columns: repeat(auto-fill, minmax(calc(100% - 10px), 1fr));
+
+			form {
+				fieldset {
+					margin-top: 20px;
+					margin-bottom: 20px;
+					border: 3px solid $veldhuizen__groen;
+					legend {
+						background-color: $veldhuizen__oranje;
+						color: #fff;
+						padding: 1rem;
+					}
+
+					label {
+						padding-top: 30px;
+						// padding-bottom: 10px;
+					}
+
+					input[type="text"],
+					input[type="email"] {
+						width: 100%;
+						padding: 12px 20px;
+						margin: 8px 0;
+						display: block;
+						border: 1px solid #ccc;
+						border-radius: 4px;
+						// box-sizing: border-box;
+
+						&:focus {
+							background-color: $veldhuizen__groen;
+							color: white;
+						}
+					}
+
+					input[type="number"] {
+						float: right;
+					}
+
+					input[type="date"] {
+						display: inline;
+						width: 130px;
+						float: right;
+					}
+
+					input[type="checkbox"] {
+						display: inline;
+					}
+
+					input[type="file"] {
+						width: 50%;
+						// Ik haat dit ding met een passie
+						// Ik heb legit 1 uur gekut om te zorgen dat er geen overflow was hierdoor
+					}
+				}
+
+			}
+
+		}
 	}
 
-	
+
 }
